id: 6920, comment: Adds sticky header to mobile site with some exceptions -  Adds CSS to fix position of header on smaller screen sizes
- restyles header globally to make it less deep

- updates main content position in line with changes to header depth

- Add non-sticky class when on a tool page (with the exception of payday loans tool, which has own layout)

- Adds styles to remove sticky header from selected pages

--- a/app/assets/stylesheets/components/common/_mas_logo.scss
+++ b/app/assets/stylesheets/components/common/_mas_logo.scss
@@ -9,6 +9,8 @@
   overflow: hidden;
   vertical-align: middle;
   width: 200px;
+  font-size: 0;
+  line-height: 1;
 
   @include respond-to($mq-m) {
     width: 285px;
