--- a/app/assets/stylesheets/components/common/_mobile_nav.scss
+++ b/app/assets/stylesheets/components/common/_mobile_nav.scss
@@ -11,15 +11,23 @@
 .mobile-nav__item {
   @extend %type-navigation;
   float: left;
-  margin: $baseline-unit*1.5 $baseline-unit $baseline-unit*1.5 0;
+  margin: $baseline-unit $baseline-unit $baseline-unit 0;
+
+  @include respond-to($mq-m) {
+    margin: $baseline-unit*1.5 $baseline-unit $baseline-unit*1.5 0;
+  }
 }
 
 .mobile-nav__link {
   @extend %link-nav-primary;
-  padding: $baseline-unit*2.5;
+  padding: $baseline-unit*2;
   display: block;
   border-radius: $baseline-unit/2;
   background-color: $color-header-buttons;
+
+  @include respond-to($mq-m) {
+    padding: $baseline-unit*2.5;
+  }
 
   &:hover,
   &:focus {
@@ -28,7 +36,14 @@
 }
 
 .mobile-nav__link--search {
-  padding: 15px 13px 11px 15px;
+  line-height: 0.8;
+  padding: $baseline-unit*2 13px $baseline-unit*2 15px;
+
+  @include respond-to($mq-m) {
+    line-height: inherit;
+    padding: 15px 13px 11px 15px;
+  }
+
   &.is-on {
     &:before {
       @include triangle(bottom, 7, 14, $color-header-buttons);
